[package]
name = "token_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
