[package]
name = "token_processor"
description = "A fast, streaming‐oriented token processor for Large Language Model output in Rust. It's meant to be used with already decoded text tokens/chunks."
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "license.md"
repository = "https://github.com/ljt019/token_processor/"

[dependencies]
aho-corasick = "1.1.3"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
