[package]
name = "token_processor"
description = "A fast, streaming‑first Rust library for processing LLM outputs by attaching callbacks to XML‑style tags—supporting both streaming and buffered handlers—and using aho‑corasick for ultra‑efficient, cross‑chunk pattern matching on decoded text tokens."
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "license.md"
repository = "https://github.com/ljt019/token_processor/"

[dependencies]
aho-corasick = "1.1.3"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
